# k8sville

./: Cargo.toml  Dioxus.toml
src/: kube.rs  library.rs  main.rs
src/maps/: cluster.rs  default.rs  deployment.rs  mod.rs  namespace.rs  pod.rs
src/presets/: deployment.rs  mod.rs  namespace.rs  pod.rs
