[package]
name = "k8sville"
version = "0.1.0"
authors = ["LorenzoRottigni <lorenzo@rottigni.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
kube = { version = "0.91", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.22.0", features = ["v1_26"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.98"
# rpgx = { version = "0.1.5" }
# rpgx-dioxus = { version = "0.1.5", features = ["desktop"] }
rpgx-dioxus = { path = "./../rpgx/packages/plugins/dioxus", name = "rpgx_dioxus", features = ["desktop"] }
rpgx = { path = "./../rpgx/packages/core" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
